# AlekSIS

./: .gitignore  .gitlab-ci.yml  .mrconfig  CONTRIBUTING.rst  Dockerfile  LICENCE.rst  README.rst  docker-compose.yml
.github/: PULL_REQUEST_TEMPLATE.md
ci/: build_docker.yml  build_meta.yml  deploy_pypi.yml  general.yml  test.yml  test_integration.yml
ci/deploy/: demo.yml  pages.yml  review.yml  trigger_dist.yml
ci/docker/: app_image.yml  dist.yml  image.yml  trigger_dist.yml
ci/integration/: test.yml
ci/publish/: meta.yml  pypi.yml
ci/test/: lint.yml  migrations.yml  security.yml  test.yml
docker/: entrypoint.sh
docker/app/: Dockerfile
meta/aleksis/: LICENCE.rst  pyproject.toml
meta/aleksis-builddeps/: pyproject.toml
template/: check_apps.py  check_apps.toml  tox.ini.in
