[tool.poetry]
name = "AlekSIS-Builddeps"
version = "1"
packages = []

description = "AlekSIS (School Information System) — Build/Dev dependencies for apps"
authors = ["Dominik George <dominik.george@teckids.org>"]
maintainers = ["Jonathan Weth <wethjo@katharineum.de>", "Dominik George <dominik.george@teckids.org>"]
license = "EUPL-1.2-or-later"
homepage = "https://aleksis.org/"
repository = "https://edugit.org/AlekSIS/official/AlekSIS"
keywords = ["SIS", "education", "school", "digitisation", "school apps"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: Django :: 3.0",
    "Intended Audience :: Developers",
]

[tool.poetry.dependencies]
sphinx = "^3.0"
sphinxcontrib-django = "^0.5.0"
sphinx-autodoc-typehints = "^1.7"
django-stubs = "^1.1"
pytest = "^6.0"
pytest-django = "^3.7"
pytest-django-testing-postgresql = "^0.1"
selenium = "^3.141.0"
safety = "^1.8.5"
flake8 = "^3.7.9"
flake8-django = "^1.0.0"
flake8-fixme = "^1.1.1"
flake8-mypy = "^17.8.0"
flake8-bandit = "^2.1.2"
flake8-builtins = "^1.4.1"
flake8-docstrings = "^1.5.0"
flake8-rst-docstrings = "^0.0.13"
black = "^19.10b0"
flake8-black = "^0.2.0"
isort = "^5.0.0"
flake8-isort = "^4.0.0"
pytest-cov = "^2.8.1"
pytest-sugar = "^0.9.2"

[build-system]
requires = ["poetry>=1.0"]
build-backend = "poetry.masonry.api"
