[tool.poetry]
name = "AlekSIS"
version = "21.04a0.dev0"
packages = [{include = "_aleksis.py"}]

description = "AlekSIS (School Information System) — 21.04 Codename Bruner"
authors = ["Dominik George <dominik.george@teckids.org>"]
maintainers = ["Jonathan Weth <wethjo@katharineum.de>", "Dominik George <dominik.george@teckids.org>"]
license = "EUPL-1.2-or-later"
homepage = "https://aleksis.org/"
repository = "https://edugit.org/AlekSIS/official/AlekSIS"
keywords = ["SIS", "education", "school", "digitisation", "school apps"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: Django :: 3.0",
    "Intended Audience :: Education",
]

[[tool.poetry.source]]
name = "gitlab"
url = "https://edugit.org/api/v4/projects/461/packages/pypi/simple"
secondary = true

[tool.poetry.dependencies]
AlekSIS-Core = "*"
AlekSIS-App-Alsijil = "*"
AlekSIS-App-CSVImport = "*"
AlekSIS-App-Chronos = "*"
AlekSIS-App-DashboardFeeds = "*"
AlekSIS-App-Hjelp = "*"
AlekSIS-App-LDAP = "*"
AlekSIS-App-Untis = "*"

[build-system]
requires = ["poetry>=1.0"]
build-backend = "poetry.masonry.api"
